--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ section#services div.services div.service_bottom div.service_item { flex-basis: 
 section#services div.services div.service_bottom div.service_item p.service_item_text { color: #B1BECD; font-size: 1.4rem; line-height: 2rem; font-weight: 500; text-align: left; margin-bottom: 15px; transition: all 0.3s ease-in-out; }
 section#services div.services div.service_bottom div.service_item p.service_item_text span.service_text_span { color: #496D96; font-weight: 700; }
 section#services div.services div.service_bottom div.service_item::after { content: ''; width: 100%; height: 170px; background-color: #485563; position: absolute; left: 0px; top: 0px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); z-index: -1; border-radius: 20px; }
-section#services div.services div.service_bottom div.service_item div.item_icon { width: 120px; height: 120px; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 15px; z-index: 2; }
+section#services div.services div.service_bottom div.service_item div.item_icon { width: 120px; height: 120px; margin-left: auto; margin-right: auto; margin-top: 0px; margin-bottom: 15px; z-index: 2; transition: 0.3s ease-in-out; transition-property: transform }
 section#services div.services div.service_bottom div.service_item div.icon_first { background-image: url(./vectors/handshake.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_second { background-image: url(./vectors/armed_guard.svg); background-size: contain; background-position: center; background-repeat: no-repeat; }
 section#services div.services div.service_bottom div.service_item div.icon_third { background-image: url(./vectors/unarmed_guard.svg); background-size: cover; background-position: center; background-repeat: no-repeat; }
@@ -67,17 +67,17 @@ section#services div.services div.service_bottom div.service_item div.icon_four 
 section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.5rem; margin: auto; color: #29323C; margin-bottom: 15px; text-transform: uppercase; z-index: 2; background-color: #B1BECD; padding: 10px; border-radius: 12px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2); transition: all 0.2s ease-in-out; transition-property: box-shadow; }
 /* End Services Section */
 /* Projects Section */
-section#projects { background-image: url(./vectors/wave_about.svg), url(./vectors/wave_about2.svg); background-repeat: no-repeat; background-size: 300%, 350%; background-position: top, bottom; }
+section#projects { background-image: url(./vectors/wave_about.svg), url(./vectors/wave_about2.svg); background-repeat: no-repeat; background-size: 250%, 350%; background-position: top, bottom; }
 section#projects svg { margin-top: -200px; }
 section#projects div.projects div.projects_header h1.section_title { font-size: 2.6rem; }
-section#projects div.projects div.projects_header { max-width: 1400px; margin: 0px auto; }
+section#projects div.projects div.projects_header { max-width: 1400px; margin: 0px auto; margin-top: 50px; }
 section#projects div.projects div.projects_header p { padding: 0px 30px; font-weight: 400; }
 section#projects div.projects div.projects_header p span.projects_description_span { color: #29323C; font-weight: 700; }
 section#projects div.projects { flex-direction: column; max-width: 1400px; margin: 0px auto; padding: 100px 0px;  }
 section#projects div.projects div.all_projects { display: flex; align-items: center; justify-content: center; flex-direction: column; margin-top: 50px; background: transparent; }
 section#projects div.projects div.all_projects div.project_item { display: flex; align-items: center; justify-content: center; flex-direction: column; width: 80%; margin: 20px auto; overflow: hidden; border-radius: 30px; box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.2);}
 section#projects div.projects div.all_projects div.project_item div.project_info { padding: 10px; flex-basis: 50%; height: 100%; display: flex; align-items: flex-start; justify-content: center; flex-direction: column; background-color: #29323C; }
-section#projects div.projects div.all_projects div.project_item div.project_info h1.project_title { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #29323C; background-color: #B1BECD; padding: 20px; border-radius: 20px; margin-left: auto; margin-right: auto; }
+section#projects div.projects div.all_projects div.project_item div.project_info h1.project_title { font-size: 1.5rem; font-weight: 700; margin-left: 15px; margin-top: 15px; margin-bottom: 15px; text-transform: uppercase; color: #29323C; background-color: #B1BECD; padding: 15px; border-radius: 20px; margin-left: auto; margin-right: auto; }
 section#projects div.projects div.all_projects div.project_item div.project_info p.project_description { font-weight: 500; font-size: 1.4rem; color: #B1BECD; line-height: 2.3rem; text-align: left; margin-bottom: 15px; }
 section#projects div.projects div.all_projects div.project_item div.project_info p.project_description span.project_detail {  color: #496D96; font-weight: 700; }
 section#projects div.projects div.all_projects div.project_item div.project_image { flex-basis: 50%; height: 300px; width: 100%; overflow: hidden; position: relative; background-color: #485563; padding: 20px; display: flex; justify-content: center; align-items: center; position: relative; z-index: 1; }
@@ -85,7 +85,7 @@ section#projects div.projects div.all_projects div.project_item div.project_imag
 section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.9); bottom: 0px;  }
 /* End Projects Section */
 /* Contact Section */
-section#contact { padding: 100px 0px 0px 0px; background-image: url(./vectors/wave_contact.svg), url(./vectors/world_map_contact.svg); background-repeat: no-repeat; background-size: 350%, 300%; background-position: top, center; }
+section#contact { padding: 100px 0px 0px 0px; background-image: url(./vectors/wave_contact.svg), url(./vectors/world_map_contact.svg); background-repeat: no-repeat; background-size: 250%, 300%; background-position: top, center; }
 section#contact div.contact div.contact_header h1.section_title { font-size: 2.6rem; }
 section#contact div.contact { flex-direction: column; max-width: 1400px; margin: 0px auto; margin-bottom: 50px; }
 section#contact div.contact div.contact_header p { max-width: 1400px; padding: 0px 30px; font-weight: 400;  }
@@ -101,17 +101,17 @@ section#contact div.contact div.contact_items div.contact_item div.contact_info 
 /* End Contact Section */
 /* Footer Section */
 section#footer { background-image: url(./vectors/wave_footer.svg); background-repeat: no-repeat; background-size: 250%; background-position: bottom; }
-section#footer div.footer a#emblem_link div.emblem { width: 150px; height: 150px; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; left: 50%; top: 50px; transform: translateX(-50%); z-index: 3; margin: 0px 0px; }
+section#footer div.footer a#emblem_link div.emblem { width: 150px; height: 150px; background-image: url('./images/jpgobbi_logo_withoutbg_cropped.png'); background-repeat: no-repeat; background-position: center; background-size: 100%; position: absolute; left: 50%; top: 80px; transform: translateX(-50%); z-index: 3; margin: 0px 0px; }
 section#footer div.footer { min-height: 300px; flex-direction: column; justify-content: center; align-items: flex-start; position: relative; z-index: 1; }
 section#footer div.footer div.brand { position: absolute; bottom: 0px; text-align: left; margin: auto; }
-section#footer div.footer div.brand h1.brand_title { color: #496D96; margin-bottom: 5px; font-weight: 700; margin-left: 10px; }
+section#footer div.footer div.brand h1.brand_title { font-size: 0.8rem; color: #496D96; margin-bottom: 5px; font-weight: 700; margin-left: 10px; }
 section#footer div.footer div.brand h1.brand_title span.brand_span { color: #B1BECD; }
 section#footer div.footer div.brand h2.brand_subtitle { font-size: 0.8rem; text-transform: uppercase; font-weight: 500; color: #B1BECD; margin-bottom: 5px; margin-left: 10px; }
 section#footer div.footer div.brand h2.brand_subtitle span.brand_span { color: #496D96; font-weight: 700; }
 section#footer div.footer div.brand h3.company_address { font-size: 0.8rem; color: #B1BECD; text-transform: uppercase; margin-bottom: 5px; margin-left: 10px; }
-section#footer div.footer div.brand h4.copyright { font-size: 1rem; font-weight: 500; text-transform: uppercase; color: #B1BECD; margin-left: 10px; margin-bottom: 15px; }
+section#footer div.footer div.brand h4.copyright { font-size: 0.8rem; font-weight: 500; text-transform: uppercase; color: #B1BECD; margin-left: 10px; margin-bottom: 15px; }
 section#footer div.footer div.brand h4.copyright span.copy_company { color: #496D96; }
-section#footer div.footer a.social_media_icon i { font-size: 5rem; position: absolute; bottom: 100px; right: 25px; color: #3B5998; text-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: all 0.3s; }
+section#footer div.footer a.social_media_icon i { font-size: 2rem; position: absolute; bottom: 18px; right: 8px; color: #3B5998; text-shadow: 0px 15px 25px rgba(0, 0, 0, 0.2); transition: all 0.3s; }
 /* End Footer Section */
 /* General Keyframes */
     @keyframes hamburger_puls { 0% { opacity: 1; transform: scale(1); } 100% { opacity: 0; transform: scale(1.6); } }
@@ -131,7 +131,7 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#header div.header div.nav_bar div.nav_list div.hamburger div.bar::before { bottom: 12px; }
     /* End Main Header Menu */
     /* Hero Section */
-    section#hero { background-size: 150%; }
+    section#hero { background-size: 125%; }
     section#hero div.hero div.hero_content { width: 100%; display: flex; flex-direction: row; justify-content: space-around; }
     section#hero div.hero div.hero_content div.company_logo { width: 300px; height: 300px; }
     section#hero div.hero div.hero_content div.hero_titles { align-items: flex-end; }
@@ -168,7 +168,7 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#projects div.projects div.all_projects div.project_item div.project_image img { transition: 0.3s ease; transition-property: transform; width: 90%; height: auto; transform: scale(0.90); }
     /* End Projects Section */
     /* Contact Section */
-    section#contact { background-size: 200%, 150%; background-position: top, bottom; }
+    section#contact { background-size: 200%, 100%; background-position: top, bottom; }
     section#contact div.contact div.contact_header h1.section_title { font-size: 4rem; }
     section#contact div.contact div.contact_header p { font-size: 1.8rem; padding: 0px 40px; }
     section#contact div.contact div.contact_items { margin-top: 70px; flex-direction: row; flex-wrap: wrap; }
@@ -177,23 +177,24 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.6em; }
     /* End Contact Section */
     /* Footer Section */
-    section#footer { background-size: 150%; }
+    section#footer { background-size: 150%; min-height: 300px; }
     section#footer div.footer a#emblem_link div.emblem { width: 200px; height: 200px; top: 0px; }
     section#footer div.footer div.brand h1.brand_title { font-size: 1.3rem; }
     section#footer div.footer div.brand h2.brand_subtitle { font-size: 1.3rem; }
     section#footer div.footer div.brand h3.company_address { font-size: 1.3rem; }
     section#footer div.footer div.brand h4.copyright { font-size: 1.3rem; }
-    section#footer div.footer a.social_media_icon i { font-size: 7rem; top: 50px; }
+    section#footer div.footer a.social_media_icon i { font-size: 5rem; bottom: 20px; right: 10px; }
     /* End Footer Section */
 }
 /* End Media Query For Tablet */
 /* Media Query For Desktop */
 @media only screen and (min-width: 1200px) {
     /* Main Header Menu */
-    section#header div.header div.nav_bar { max-width: 1200px; }
-    section#header div.header div.nav_bar div.nav_list ul.nav_options { position: initial; display: block; min-height: 60px; height: auto; width: fit-content; background-image: none; }
+    section#header div.header div.nav_bar { max-width: 1200px; border-radius: 20px; }
+    section#header div.header div.nav_bar div.nav_list ul.nav_options { position: initial; display: flex; flex-direction: row; align-content: center; justify-content: center; height: auto; width: fit-content; }
     section#header div.header div.nav_bar div.nav_list ul.nav_options li { display: inline-block; }
-    section#header div.header div.nav_bar div.nav_list ul.nav_options li a { font-size: 2rem; border-radius: 20px; margin-top: 0px; margin-bottom: 0px; transition: 0.2s ease-in-out; transition-property: color, background-color, transform; flex-direction: row; justify-items: center; align-items: center; }
+    section#header div.header div.nav_bar div.nav_list ul.nav_options li.nav_link a i { margin-right: 10px; margin-bottom: 0px; }
+    section#header div.header div.nav_bar div.nav_list ul.nav_options li a { font-size: 2rem; border-radius: 20px; margin-top: 0px; min-height: 60px; transition: 0.2s ease-in-out; transition-property: color, background-color, transform; flex-direction: row; align-content: center; justify-content: space-between; }
     section#header div.header div.nav_bar div.nav_list ul.nav_options li { font-size: 2em; transform: scale(1.1); }
     section#header div.header div.nav_bar div.nav_list ul.nav_options li:hover a { font-size: 2rem; color: #29323C; background-color: #B1BECD; border-radius: 20px; transform: scale(0.8); }
     section#header div.header div.nav_bar div.nav_list ul.nav_options li a.active { font-size: 2rem; color: #29323C; background-color: #B1BECD; border-radius: 20px; transform: scale(0.80); }
@@ -211,10 +212,11 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     /* End Section Home */
     /* Services Section */
     section#services { background-size: 100%; }
-    section#services div.services div.service_top p  { font-size: 2rem; }
-    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.5%; transition: 0.3s ease-in-out; transition-property: transform; }
-    section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.7rem; }
-    section#services div.services div.service_bottom div.service_item:hover { transform: scale(1.1); }
+    section#services div.services div.service_top p { font-size: 2rem; }
+    section#services div.services div.service_bottom div.service_item { flex-basis: 22%; margin: 1.2%; transition: 0.3s ease-in-out; transition-property: transform, box-shadow; }
+    section#services div.services div.service_bottom div.service_item:hover div.item_icon { transform: scale(1.1); }
+    section#services div.services div.service_bottom div.service_item h2.service_title { font-size: 1.9rem; }
+    section#services div.services div.service_bottom div.service_item:hover { transform: scale(1.1); box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
     section#services div.services div.service_bottom div.service_item p.service_item_text { font-size: 1.7rem; }
     /* End Services Section */
     /* Projects Section */
@@ -225,18 +227,25 @@ section#footer div.footer a.social_media_icon i { font-size: 5rem; position: abs
     section#projects div.projects div.all_projects div.project_item div.project_image img { transform: scale(0.75); box-shadow: none; }
     /* End Projects Section */
     /* Contact Section */
-    section#contact div.contact div.contact_header p { font-size: 2rem; padding: 0px 40px; }
+    section#contact { background-size: 200%, 70%; background-position: top, bottom; }
     section#contact div.contact { flex-direction: column; padding: 100px 0px; align-items: center; justify-content: center; min-width: 20vh; }
+    section#contact div.contact div.contact_header p { font-size: 2rem; padding: 0px 40px; }
     section#contact div.contact div.contact_items { width: 100%; display: flex; flex-direction: row; justify-content: space-evenly; align-items: center; margin: 50px; }
     section#contact div.contact div.contact_items a:hover div.contact_item { transform: scale(1.1); box-shadow: 0px 15px 30px rgba(0, 0, 0, 0.3); }
-    section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.4); }
+    section#contact div.contact div.contact_items a:hover div.contact_item div.icon { transform: scale(1.25); }
     section#contact div.contact div.contact_items div.contact_item div.contact_info h1.contact_title { font-size: 1.9rem; }
     section#contact div.contact div.contact_items div.contact_item div.contact_info h2.contacter { font-size: 1.7rem; }
     section#contact div.contact div.contact_items div.contact_item div.contact_info h3.contact_detail { font-size: 1.7em; }
     /* End Contact Section */
     /* Footer Section */
-    section#footer { background-size: 100%; }
+    section#footer { background-size: 100%; min-height: 335px; }
     section#footer a#emblem_link div.emblem { width: 200px; height: 200px; top: -120px; }
+    section#footer div.footer div.brand { margin-bottom: -20px; }
+    section#footer div.footer div.brand h1.brand_title { font-size: 1.5rem; }
+    section#footer div.footer div.brand h2.brand_subtitle { font-size: 1.5rem; }
+    section#footer div.footer div.brand h3.company_address { font-size: 1.5rem; }
+    section#footer div.footer div.brand h4.copyright { font-size: 1.5rem; margin-bottom: 0px;}
+    section#footer div.footer a.social_media_icon i { bottom: 0px; right: 30px; }
     section#footer div.footer a.social_media_icon i:hover { transform: scale(0.8); text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.5); }
     /* End Footer Section */
 }
