--- a/styles.css
+++ b/styles.css
@@ -205,7 +205,7 @@ section#footer div.footer a.social_media_icon i { font-size: 2rem; position: abs
     section#hero div.hero { display: flex; flex-direction: column; justify-content: center; align-items: center; }
     section#hero div.hero div.hero_content { width: 100%; display: flex; flex-direction: row; justify-content: space-around; }
     section#hero div.hero div.hero_content div.company_logo { width: 350px; height: 350px; background-image: url(./images/jpgobbi_logo_withoutbg_cropped.png); background-repeat: no-repeat; background-size: contain; }
-    section#hero div.hero div.middle { position: absolute; left: 50%; bottom: 5%; transform: translate(-50%, -10%); }
+    section#hero div.hero div.middle { position: absolute; left: 50%; bottom: 5%; transform: translate(-50%, -5%); margin-left: 0px; }
     section#hero div.hero div.middle div.mouse { border: 2px solid #29323C; position: absolute; left: 50%; top: 90%; transform: translate(-50%, -90%); border-radius: 25px; cursor: pointer; }
     section#hero div.hero div.middle div.mouse::before { width: 10px; height: 10px; left: 23px; animation: mouse_scroll 2s cubic-bezier(0.75, -0.95, 0.25, 0.5) infinite; }
         @keyframes mouse_scroll { 0% { opacity: 0; transform: translateY(0) scale(0.6); } 10% { opacity: 1; transform: translateY(-20px) scale(1.2); } 100% { opacity: 0; transform: translateY(14px) scale(0.3); } }
